use the libast semantics.  Unfortunately, he never implemented the
removal code, so I'm hoping that some kind soul who has had a data
structures class more recently than I have will jump in and finish it
for me.  (*hint hint*)  :-)
----------------------------------------------------------------------
Mon Dec 30 18:10:42 2002                        Michael Jennings (mej)

Pass "make distcheck" please and thank you. :)
----------------------------------------------------------------------
Mon Dec 30 18:26:55 2002                        Michael Jennings (mej)

Update spec file.
----------------------------------------------------------------------
Thu Feb 20 00:44:26 2003                        Michael Jennings (mej)

The beginnings of doxygen documentation.
----------------------------------------------------------------------
Sun Feb 23 22:00:55 2003                        Michael Jennings (mej)

Still working on the documentation.  If you run "doxygen" from the
top-level directory, you can see what's there so far.

At some point, I'll be needing a logo.  So if you're artistically
inclined, feel free to take a stab at one. :)
----------------------------------------------------------------------
Fri Mar  7 23:52:30 2003                        Michael Jennings (mej)

Definitely making progress on the documentation, but there's still a
long way to go.
----------------------------------------------------------------------
Sat Mar  8 00:01:20 2003                        Michael Jennings (mej)

Let's try not to break stuff, shall we?
----------------------------------------------------------------------
Mon Mar 17 16:27:53 2003                        Michael Jennings (mej)

More work on docs.
----------------------------------------------------------------------
Tue Apr  1 23:07:15 2003                        Michael Jennings (mej)

More documentation work.  libast.h is almost finished.
----------------------------------------------------------------------